[gd_scene load_steps=4 format=3 uid="uid://bq3nvxvnxfek4"]

[ext_resource type="Script" path="res://src/hero_panel/HeroPanel.gd" id="1_0kmgj"]
[ext_resource type="Texture2D" uid="uid://bomytq1jpagf4" path="res://assets/art/Warrior_128x128.png" id="2_77xvi"]
[ext_resource type="Script" path="res://demos/party-controller/HeroRepositoryVisualizer.gd" id="3_ft478"]

[node name="HeroPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0kmgj")
portrait_to_display = ExtResource("2_77xvi")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_right = 215.0
offset_bottom = 128.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_right = 215.0
offset_bottom = 128.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HeroPortrait" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("2_77xvi")
stretch_mode = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HeroStatistics" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="LabelOfJob" type="Label" parent="MarginContainer/HBoxContainer/HeroStatistics"]
layout_mode = 2
text = "Peasant:"

[node name="HeroRepositoryVisualizerWarrior" type="Label" parent="MarginContainer/HBoxContainer/HeroStatistics"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
script = ExtResource("3_ft478")

[node name="ItemList" type="ItemList" parent="MarginContainer/HBoxContainer/HeroStatistics"]
visible = false
layout_mode = 2
auto_height = true
item_count = 4
max_columns = 3
same_column_width = true
item_0/text = "A"
item_1/text = "B"
item_2/text = "C"
item_3/text = "D"
